--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.446.0",
     "next": "^15.3.4",
     "next-themes": "^0.3.0",
