--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "input-otp": "^1.2.4",
     "lenis": "^1.3.15",
     "lucide-react": "^0.446.0",
+    "motion": "^11.18.2",
     "next": "^15.3.4",
     "next-themes": "^0.3.0",
+    "ogl": "^1.0.11",
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
