--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "web-vitals": "^3.5.0",
